services/foundryvtt/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foundryvtt
  namespace: foundryvtt
  labels:
    app.kubernetes.io/name: foundryvtt
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: foundryvtt
  template:
    metadata:
      labels:
        app.kubernetes.io/name: foundryvtt
    spec:
      hostname: foundryvtt
      securityContext:
        fsGroup: 1000
      containers:
        - name: foundryvtt
          image: felddy/foundryvtt:14
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 30000
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 6
          resources:
            requests:
              cpu: "500m"
              memory: 1Gi
            limits:
              cpu: "4"
              memory: 4Gi
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: foundryvtt-data
