services/foundryvtt/service.yml
apiVersion: v1
kind: Service
metadata:
  name: foundryvtt
  namespace: foundryvtt
  labels:
    app.kubernetes.io/name: foundryvtt
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 30000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: foundryvtt
